tests/paczka1/small_fuzzy/11491320.err
Error in line 2: HgL3seWS0F S163 27,0
Error in line 3: dxCK5Ihr S163 17,8
Error in line 8: 6xf0iDmJjkN S163 26,1
Error in line 9: dxCK5Ihr A862 12,3
Error in line 12: dxCK5Ihr A716 16,3
Error in line 11: 6xf0iDmJjkN A716 20,1
